# snap.openstack

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst  installation.rst  snap-openstack.yaml  usage.rst
releasenotes/source/: conf.py  index.rst
snap_openstack/: __init__.py  base.py  lock.py  renderer.py  utils.py
snap_openstack/cmd/: run.py
snap_openstack/tests/: test_snap_openstack.py
snap_openstack/tests/data/: snap-openstack.yaml
